# example.qt.mp3player

./: CMakeLists.txt  readme.txt
source/: main.cpp
source/controller/: player.h
source/controller/implementation/: player.cpp  player.h
source/view/gui/: main_window.cpp  main_window.h
